# anders

./: CHANGELOG  CHANGELOG.md  LICENSE  Makefile  README.md  anders.opam  dune
.github/workflows/: main.yml
doc/: anders.bib  anders.tex  anders.vtc
experiments/: 3-mult.anders  6016.anders  N1000.anders  N3000.anders  axioms.anders  brackets.anders  church.anders  control.anders  illtyped.anders  leibniz.anders  list.anders  logic.anders  plugin-syntax.anders  sharp-counterexample.anders  ski.anders  test.anders  vec.anders
share/anders-mc/: anders.syntax
share/anders-vscode/: package.json
share/anders-vscode/syntaxes/: anders.tmLanguage.json
src/frontend/: anders.ml  combinators.ml  cubical.ml  decl.ml  dune  error.ml  lexer.mll  module.ml  parser.ml  parser.mly  prettyprinter.ml  radio.ml  repl.ml  token.ml
src/kernel/: anders.ml  check.ml  chm.ml  cofib.ml  cubical.ml  decl.ml  dnf.ml  dune  elab.ml  error.ml  expr.ml  formula.ml  gen.ml  hits.ml  ident.ml  module.ml  parser.mly  prefs.ml  prettyprinter.ml  rbv.ml  repl.ml  term.ml  trace.ml  universe.ml
src/language/: decode.ml  encode.ml  prelude.ml  spec.ml
