opam-version: "2.0"
name: "anders"
version: "1.4.2"
maintainer: "Siegmentation Fault <siegmentationfault@yandex.ru>"
authors: [
  "Namdak Tonpa @5HT"
  "Siegmentation Fault @siegment"
]
bug-reports: "https://github.com/groupoid/anders/issues"
dev-repo: "git+https://github.com/groupoid/anders"
synopsis: "Cubical Type Checker"
license: "ISC"
depends: [
  "dune" {>= "2.0"}
  "zarith" {>= "1.12"}
  "ocaml" {>= "4.10"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
