opam-version: "2.0"
name: "anders"
version: "1.8.0"
maintainer: "Siegmentation Fault <siegmentationfault@yandex.ru>"
authors: [
  "Namdak Tonpa @5HT"
  "Siegmentation Fault @siegment"
]
bug-reports: "https://github.com/forked-from-1kasper/anders/issues"
dev-repo: "git+https://github.com/forked-from-1kasper/anders"
synopsis: "Cubical Type Checker"
license: "ISC"
depends: [
  "dune" {>= "2.0"}
  "zarith" {>= "1.12"}
  "ocaml" {>= "4.10"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
