(env (dev (flags (:standard -warn-error -A))))

(install (files library/proto.anders
                library/data/sigma.anders
                library/data/W-type.anders
                library/data/bool.anders
                library/data/either.anders
                library/data/maybe.anders
                library/data/nat.anders
                library/data/list.anders
                library/data/fin.anders
                library/data/vec.anders
                library/data/path.anders
                library/data/equiv.anders
                library/data/iso.anders
                library/mathematics/prop.anders
                library/mathematics/algebra/algebra.anders
                library/mathematics/categories/category.anders
                library/mathematics/categories/functor.anders
                library/mathematics/categories/groupoid.anders
                library/mathematics/glivenko.anders
                library/mathematics/bundle.anders
                library/mathematics/constsquares.anders
                library/mathematics/constcubes.anders
                library/mathematics/pullback.anders
                library/data/coequalizer.anders
                library/data/pushout.anders
                library/data/hubSpokes.anders
                library/data/quotient.anders
                library/data/truncation.anders
                library/data/suspension.anders
                library/data/circle.anders
                library/data/sphere.anders
                library/modal/infinitesimal.anders
                library/modal/etale.anders
                library/modal/disc.anders
                library/mathematics/favonia.anders)
         (section share) (package anders))
